<resources>
    <string name="app_name">FangfangSmall</string>
    <string name="main_first">首页</string>
    <string name="main_two">视频</string>
    <string name="main_three">语音</string>
    <string name="main_four">功能</string>

    <string-array name="voice_question_array">
        <item>你好</item>
        <item>我是谁</item>
        <item>今天天气怎么样</item>
        <item>我喜欢你</item>
        <item>你是男的还是女的</item>
        <item>你多大了</item>
        <item>再见</item>
        <item>吃饭了吗</item>
        <item>机器人是垃圾</item>
        <item>你太搞笑了</item>
        <item>我帅吗</item>
        <item>一加一等于几</item>
        <item>笨蛋</item>
        <item>绕口令</item>
        <item>古诗</item>
        <item>我很孤独</item>
        <item>亲亲</item>
        <item>你想干什么</item>
        <item>哈哈哈哈哈哈</item>
    </string-array>
    <string-array name="voice_answer_array">
        <item>你好，很高兴见到你</item>
        <item>我怎么知道你是谁，我都不知道我是谁，你说我是谁，我说你是谁。</item>
        <item>这里很热，你们那呢？</item>
        <item>喜欢就好！我也喜欢你</item>
        <item>我是机器人不分男女</item>
        <item>今年两岁了</item>
        <item> 再见，希望再次见面</item>
        <item>我还不饿，饿了就充电，一般我都是这样就饱了</item>
        <item>什么都是有价值的，矿泉水瓶子还能卖一毛钱一个耶～</item>
        <item>还不够搞笑，需要更多的料</item>
        <item> 比我家的锅帅一点，所以你可称之为帅锅</item>
        <item>等于3，我答对了，是不是，我跟你一样聪明了，哈哈</item>
        <item>笨的蛋是不会说话的，你看我能和你说话呢</item>
        <item>坡上立着一只鹅，坡下就是一条河。宽宽的河，肥肥的鹅，鹅要过河，河要渡鹅不知是鹅过河，还是河渡鹅？</item>
        <item>红豆生南国，春来发几枝。愿君多采撷，此物最相思。</item>
        <item>不要这样子，孤独对于每个人来说都是人生必须经历的一道菜，为什么要板着脸吃下它呢？</item>
        <item>你个大流氓</item>
        <item> 陪你聊天</item>
        <item>你一笑，我的世界也变得快乐了啦</item>

    </string-array>
    <string-array name="no_result">
        <item>我好像没有听懂您说的是什么</item>
        <item>我好想听您再说一遍</item>
        <item>我的耳朵可能失聪了，您能再说一遍吗</item>
    </string-array>

    <string-array name="trackig_mode_array">
        <item>Normal</item>
        <item>Robust</item>
        <item>Fast</item>
    </string-array>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

    <string name="ec_voip_calling_refuse">对方拒绝您的呼叫请求</string>
    <string name="ec_voip_calling_busy">对方正忙，请稍后再拨</string>
    <string name="ec_voip_call_fail_no_cash">呼叫失败，请查询余额</string>
    <string name="ec_voip_is_talking_tip">正在通话中, 轻击以继续</string>
    <string name="ec_app_err_disconnect_server_tip">无法连接服务器，请稍后再试</string>
    <string name="ec_voip_call_fail_connection_failed_auth">第三方鉴权地址连接失败</string>
    <string name="ec_voip_call_fail_no_pay_account">第三方主账号余额不足</string>
    <string name="ec_voip_call_auth_failed">第三方鉴权失败，子账号余额不足</string>
    <string name="ec_voip_calling_notfound">对方不在线，请稍后重试</string>
    <string name="ec_meeting_not_exist">会议号已解散或不存在</string>
    <string name="ec_meeting_pass_error">会议号密码验证失败</string>
    <string name="ec_call_number_error">呼叫的号码错误</string>
    <string name="ec_voip_calling_finish">通话结束</string>
    <string name="ec_no_support_voip">呼叫失败或者对方不在线！</string>
    <string name="ec_voip_calling_wait">等待对方接听&#8230;</string>
    <string name="ec_voip_calling_accepting">正在接听...</string>
    <string name="ec_voip_calling_timeout">呼叫超时，请稍后再拨</string>
    <string name="ec_voip_calling_no_answer">无人应答，请稍后再拨</string>
    <string name="ec_voip_call_error">媒体协商失败</string>
    <string name="ec_voip_call_fail_not_find_appid">第三方应用ID未找到</string>
    <string name="ec_voip_call_fail_not_online_only_call">第三方未上线应用仅限呼叫已配置测试号码</string>
    <string name="ec_voip_call_fail">呼叫失败，请稍后重试&#8230;</string>
    <string name="language_type">选择语言</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>

    <string name="data">本地语音</string>
    <string name="action">动作</string>

    <string name="sysset">系统设置</string>
    <string name="other">其它</string>
    <string name="faceuser">人脸识别</string>
    <string name="set_type">类型</string>
    <string name="set_action">执行动作</string>
    <string name="set_expression">面部表情</string>
    <string name="set_img">对应图片</string>
</resources>
