<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_background"
    tools:context="com.example.dell.fangfangsmall.activity.MainActivity">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:id="@+id/rl_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/ic_train_takephoto"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="拍照"
                android:textColor="@color/color_white"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_takephoto"
            android:layout_marginTop="47px"
            android:background="@mipmap/ic_train_face"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="人脸提取"
                android:textColor="@color/color_white"
                android:textSize="25sp" />
        </RelativeLayout>
    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50px"
        android:src="@mipmap/ic_mian_bottom_line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14px"
        android:layout_marginRight="40px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:background="@mipmap/ic_main_bottom_first"
            android:gravity="center"
            android:text="@string/main_first"
            android:textColor="@color/color_white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:background="@mipmap/ic_main_bottom_two"
            android:gravity="center"
            android:text="@string/main_two"
            android:textColor="@color/color_white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:background="@mipmap/ic_main_bottom_three"
            android:gravity="center"
            android:text="@string/main_three"
            android:textColor="@color/color_white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_main_bottom_four"
            android:gravity="center"
            android:text="@string/main_four"
            android:textColor="@color/color_white"
            android:textSize="11sp" />
    </LinearLayout>


</RelativeLayout>
